--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,48 @@
   "configurations": [
     {
       "type": "java",
+      "name": "MulticastPeer",
+      "request": "launch",
+      "mainClass": "secao_4_4.multicast.MulticastP2P.MulticastPeer"
+    },
+    {
+      "type": "java",
+      "name": "ServidorMulticast",
+      "request": "launch",
+      "mainClass": "secao_4_4.multicast.MulticastCS.ServidorMulticast"
+    },
+    {
+      "type": "java",
+      "name": "ClienteMulticast",
+      "request": "launch",
+      "mainClass": "secao_4_4.multicast.MulticastCS.ClienteMulticast"
+    },
+    {
+      "type": "java",
+      "name": "XStreamJSONExample",
+      "request": "launch",
+      "mainClass": "secao_4_3.serializationTexts.serializationXML.XStreamJSONExample"
+    },
+    {
+      "type": "java",
+      "name": "XStreamXML",
+      "request": "launch",
+      "mainClass": "secao_4_3.serializationTexts.serializationXML.XStreamXML"
+    },
+    {
+      "type": "java",
+      "name": "JAXBExample",
+      "request": "launch",
+      "mainClass": "secao_4_3.serializationTexts.serializationJSON.JAXBExample"
+    },
+    {
+      "type": "java",
+      "name": "XStreamJSONExample",
+      "request": "launch",
+      "mainClass": "secao_4_3.serializationTexts.serializationJSON.XStreamJSONExample"
+    },
+    {
+      "type": "java",
       "name": "XStreamXMLExample",
       "request": "launch",
       "mainClass": "secao_4_3.serializationTexts.serializationXML.XStreamXMLExample"
